update api annotations
